--- a/app/mail_templates/Donation_Cancellation_Confirmation.txt.twig
+++ b/app/mail_templates/Donation_Cancellation_Confirmation.txt.twig
@@ -1,4 +1,4 @@
-{$ greeting_generator.createFormalGreeting( recipient.lastName, recipient.salutation, recipient.title )|raw $}
+{$ greeting_generator.createFormalGreeting( recipient.salutation, recipient.firstName, recipient.lastName, recipient.title )|raw $}
 
 {$ mail_content('donation_cancellation_confirmation', {
     'donation_id': donationId
