Add template tests
- add template test data for the templates containing moderation reasons now

https://phabricator.wikimedia.org/T306703

--- a/app/mail_templates/Admin_Moderation.txt.twig
+++ b/app/mail_templates/Admin_Moderation.txt.twig
@@ -1,4 +1,10 @@
-{%- set formattedAmount = amount | default(  membershipFee ) |format_number(locale=locale) ~ ' Euro' -%}
+{% if amount is defined %}
+	{%- set formattedAmount = amount |format_number(locale=locale) ~ ' Euro' -%}
+{% elseif membershipFee is defined %}
+	{%- set formattedAmount = membershipFee |format_number(locale=locale) ~ ' Euro' -%}
+{% else %}
+	{% set formattedAmount = "-- ! Fehler im E-Mail-Template, bitte Templates überprüfen. ! --" %}
+{% endif %}
 Hallo,
 
 {$ itemType $} wurde automatisch moderiert, da der Betrag verdächtig hoch ist ( {$ formattedAmount $} ).
