--- a/app/mail_templates/Donation_Confirmation.txt.twig
+++ b/app/mail_templates/Donation_Confirmation.txt.twig
@@ -1,23 +1,20 @@
 {%- set formattedAmount = donation.amount|format_number(locale=locale) ~ ' Euro' -%}
 {$ greeting_generator.createInformalLastnameGreeting( recipient.salutation, recipient.firstName, recipient.lastName, recipient.title )|raw $}
 
-{% if donation.needsModeration %}{# Moderated emails look completely different #}
-	{$ mail_content('donation_confirmation/needs_moderation', {
-		'formatted_amount': formattedAmount
-	}) $}
-	{$ mail_content('donation_confirmation/greetings', { 'day_of_the_week': day_of_the_week } ) $}
-{% else %}
+{% if donation.moderationFlags is not defined or donation.moderationFlags is empty %}{# Moderated emails look completely different #}
 	{% if donation.paymentType == 'UEB' %}
 		{$ mail_content('donation_confirmation/paymenttype_banktransfer', {
 			'formatted_amount': formattedAmount,
 			'bank_transfer_code': donation.bankTransferCode,
 			'donation_id': donation.id,
-			'donation_interval': donation.interval|payment_interval
+			'donation_interval': donation.interval|payment_interval,
+			'interval': donation.interval
 		}) $}
 
 		{% if donation.interval > 0 %}
 			{$ mail_content('donation_confirmation/paymenttype_banktransfer_interval', {
-				'donation_interval': donation.interval|payment_interval
+				'donation_interval': donation.interval|payment_interval,
+				'interval': donation.interval
 			}) -$}
 		{% else %}
 			{$ mail_content('donation_confirmation/paymenttype_banktransfer_once') $}
@@ -26,12 +23,14 @@
 		{$- mail_content('donation_confirmation/payment_intro', {
 			'formatted_amount': formattedAmount,
 			'donation_id': donation.id,
-			'donation_interval': donation.interval|payment_interval
+			'donation_interval': donation.interval|payment_interval,
+			'interval': donation.interval
 		}) -$}
 		{% if donation.paymentType == 'BEZ' %}
 			{$- mail_content('donation_confirmation/paymenttype_directdebit', {
 				'formatted_amount': formattedAmount,
-				'donation_interval': donation.interval
+				'donation_interval': donation.interval,
+				'interval': donation.interval
 			}) $}
 		{% elseif donation.paymentType == 'PPL' or donation.paymentType == 'MCP' or donation.paymentType == 'SUB' %}
 			{$- mail_content('donation_confirmation/paymenttype_external', {
@@ -48,20 +47,36 @@
 	{% if donation.receiptOptIn %}
 
 		{$ mail_content('donation_confirmation/receipt', {
-			'donation_interval': donation.interval
+			'donation_interval': donation.interval,
+			'interval': donation.interval
 		}) $}
 	{% endif %}
 
 	{% if donation.receiptOptIn == false %}
 		{$ mail_content('donation_confirmation/receipt_support', {
-			'donation_interval': donation.interval
+			'donation_interval': donation.interval,
+			'interval': donation.interval
 		} ) $} {$ mail_content('donation_confirmation/receipt_opted_out') $}
 	{% else %}
 		{$ mail_content('donation_confirmation/receipt_support', {
-			'donation_interval': donation.interval
+			'donation_interval': donation.interval,
+			'interval': donation.interval
 		} ) $}
 	{% endif %}
 
+	{$ mail_content('donation_confirmation/greetings', { 'day_of_the_week': day_of_the_week } ) $}
+{% else %}
+	{%  if donation.moderationFlags.AMOUNT_TOO_HIGH is defined %}
+		{$ mail_content('donation_confirmation/moderation_amount_too_high', {
+		'formatted_amount': formattedAmount,
+		'interval': donation.interval
+		}) $}
+	{% else %}
+		{$ mail_content('donation_confirmation/moderation_other_reason', {
+		'formatted_amount': formattedAmount,
+		'interval': donation.interval
+		}) $}
+	{% endif %}
 	{$ mail_content('donation_confirmation/greetings', { 'day_of_the_week': day_of_the_week } ) $}
 {% endif %}
 
