Add variable values to the intro_start template
the template call was missing the variables to fill the values in the fields

solves: https://phabricator.wikimedia.org/T322185

--- a/app/mail_templates/Membership_Application_Confirmation.txt.twig
+++ b/app/mail_templates/Membership_Application_Confirmation.txt.twig
@@ -10,7 +10,10 @@
 {% endif %}
 
 {% if moderationFlags is not defined or moderationFlags is empty %}
-	{$ mail_content('membership_application_confirmation/intro_start') $}
+	{$ mail_content('membership_application_confirmation/intro_start', {
+			'membership_type': membershipType|membership_type,
+			'incentive': incentiveText
+		}) $}
 
 	{% if paymentType == 'UEB' %}
 		{$ mail_content('membership_application_confirmation/intro_ueb', {
