Allow donation address to be updated
Also removes deprecated newsletter and receipt
opt-ins.

Ticket: https://phabricator.wikimedia.org/T316632

--- a/skins/test/templates/Donation_Confirmation.html.twig
+++ b/skins/test/templates/Donation_Confirmation.html.twig
@@ -22,7 +22,7 @@
 	</p>
 {% endif %}
 
-{% if donation.optsIntoNewsletter == true %}
+{% if donation.newsletter == true %}
 	send-info
 {% endif %}
 
