--- a/skins/test/templates/Membership_Application_Embedded.html.twig
+++ b/skins/test/templates/Membership_Application_Embedded.html.twig
@@ -6,7 +6,7 @@ donation.updateToken: {$ donation.updateToken $}
 donation.amount: {$ donation.amount $}
 donation.interval: {$ donation.interval $}
 donation.paymentType: {$ donation.paymentType $}
-donation.optsIntoNewsletter: {$ donation.optsIntoNewsletter $}
+donation.newsletter: {$ donation.newsletter $}
 
 address.salutation: {$ address.salutation $}
 address.fullName: {$ address.fullName $}
