--- a/app/mail_templates/Donation_Cancellation_Confirmation.txt.twig
+++ b/app/mail_templates/Donation_Cancellation_Confirmation.txt.twig
@@ -4,15 +4,15 @@
     'donation_id': donationId
 }) $}
 
-{$ mail_content('name_head_of_suborganization') $}
-{$ mail_content('title_head_of_suborganization') $}
-{$ mail_content('address_of_suborganization') $}
+{$ mail_content('name_head_of_organization') $}
+{$ mail_content('title_head_of_organization') $}
+{$ mail_content('address_of_organization') $}
 
 ---------------------------------------------------------------------------
 {$ mail_content('wikimedia_vision') $}
 <https://spenden.wikimedia.de/>
 ---------------------------------------------------------------------------
 
-{$ mail_content('address_of_suborganization') $}
+{$ mail_content('address_of_organization') $}
 
-{$ mail_content('tax_id_suborganization_verbose') $}
+{$ mail_content('tax_id_organization_verbose') $}
