--- a/app/mail_templates/Subscription_Confirmation.txt.twig
+++ b/app/mail_templates/Subscription_Confirmation.txt.twig
@@ -5,14 +5,14 @@
 {$ mail_content('donation_hint', { 'piwiki_keyword': 'confirmed' }) $}
 
 -------------------------------------
-{$ mail_content('address_of_suborganization') $}
+{$ mail_content('address_of_organization') $}
 
 {$ mail_content('phone') $}
 {$ mail_content('email') $}
 
 {$ mail_content('bank_account') $}
 
-{$ mail_content('tax_id_suborganization') $}
+{$ mail_content('tax_id_organization') $}
 
 {$ mail_content('unsubscribe_hint', {
     'subscription_email': subscription.email,
