--- a/app/mail_templates/Contact_Confirm_to_User.txt.twig
+++ b/app/mail_templates/Contact_Confirm_to_User.txt.twig
@@ -1,7 +1,7 @@
 {$ mail_content('contact_confirm_to_user', { 'day_of_the_week': day_of_the_week }) $}
 
 -------------------------------------
-{$ mail_content('address_of_suborganization') $}
+{$ mail_content('address_of_organization') $}
 
 {$ mail_content('phone') $}
 www.wikimedia.de
@@ -9,4 +9,4 @@ www.wikimedia.de
 {$ mail_content('wikimedia_vision') $}
 <https://spenden.wikimedia.de/>
 
-{$ mail_content('tax_id_suborganization') $}
+{$ mail_content('tax_id_organization') $}
