--- a/app/mail_templates/Donation_Confirmation.txt.twig
+++ b/app/mail_templates/Donation_Confirmation.txt.twig
@@ -80,8 +80,8 @@
 	{$ mail_content('donation_confirmation/greetings', { 'day_of_the_week': day_of_the_week } ) $}
 {% endif %}
 
-{$ mail_content('name_head_of_suborganization') $}
-{$ mail_content('title_head_of_suborganization') $}
+{$ mail_content('name_head_of_organization') $}
+{$ mail_content('title_head_of_organization') $}
 
 {% if donation.paymentType == 'MCP' and donation.interval > 0 %}
 	{$ mail_content('donation_confirmation/creditcard_interval_notice') $}
@@ -92,9 +92,9 @@
 <https://spenden.wikimedia.de/>
 ---------------------------------------------------------------------------
 
-{$ mail_content('address_of_suborganization') $}
+{$ mail_content('address_of_organization') $}
 
-{$ mail_content('tax_id_suborganization_verbose') $}
+{$ mail_content('tax_id_organization_verbose') $}
 
 {$ mail_content('donation_confirmation/number', {
     'donation_id': donation.id
