Make various pages use application vars
Use of Funds, FAQ, and Supporters were replacing
the application vars with their own content. This
meant that global A/B tests wouldn't work on those
pages. This adds the application vars back.

Ticket: https://phabricator.wikimedia.org/T345721

--- a/skins/laika/templates/Base_Layout.html.twig
+++ b/skins/laika/templates/Base_Layout.html.twig
@@ -37,11 +37,13 @@
             {$ web_content( 'pages/no_javascript' ) $}
         </noscript>
     </div>
-    <div id="appdata" data-application-vars="{$ _context|json_encode|e('html_attr') $}"
-    data-application-messages="{$ translations()|e('html_attr') $}"
-    data-assets-path="{$ asset( '', 'skin') $}"
-    class="is-hidden">
-    </div>
+    <div
+        id="appdata"
+        data-application-vars="{$ _context|json_encode|e('html_attr') $}"
+        data-application-messages="{$ translations()|e('html_attr') $}"
+        data-assets-path="{$ asset( '', 'skin') $}"
+        class="is-hidden"
+    ></div>
 {% endblock %}
 
 {% block scripts %}
