Use a different e-mail signature when sending moderation mails
- When direct debit donations are received with an amount above a certain threshold we check back with the donor before collecting the amount from the bank account.
- Use correct signature for this

Ticket: https://phabricator.wikimedia.org/T342844

--- a/app/mail_templates/Donation_Confirmation.txt.twig
+++ b/app/mail_templates/Donation_Confirmation.txt.twig
@@ -80,8 +80,13 @@
 	{$ mail_content('donation_confirmation/greetings', { 'day_of_the_week': day_of_the_week } ) $}
 {% endif %}
 
-{$ mail_content('name_head_of_organization') $}
-{$ mail_content('title_head_of_organization') $}
+{% if donation.moderationFlags.AMOUNT_TOO_HIGH is defined %}
+	{$ mail_content('large_account_manager_name') $}
+	{$ mail_content('large_account_manager_department') $}
+{% else %}
+	{$ mail_content('name_head_of_organization') $}
+	{$ mail_content('title_head_of_organization') $}
+{% endif %}
 
 {% if donation.paymentType == 'MCP' and donation.interval > 0 %}
 	{$ mail_content('donation_confirmation/creditcard_interval_notice') $}
