Move responsibility for translation encoding
Remove special "translations" function that just JSON encodes the
translations. Instead, encode the translations inside the templates
inside the array.

This helps us avoiding unnecessary checks for `false` on `json_encode`,
since all the translations are already "pre-validated" because they were
loaded with `json_decode` in the TranslattionCollector class.

--- a/skins/laika/templates/Access_Denied.twig
+++ b/skins/laika/templates/Access_Denied.twig
@@ -10,7 +10,7 @@
     <div id="appdata"
          class="is-hidden"
          data-application-vars="{$ _context|json_encode|e('html_attr') $}"
-         data-application-messages="{$ translations()|e('html_attr') $}"
+         data-application-messages="{$ translations|json_encode|e('html_attr') $}"
          data-assets-path="{$ asset( '', 'skin') $}">
     </div>
 {% endblock %}
