--- a/skins/laika/templates/Base_Layout.html.twig
+++ b/skins/laika/templates/Base_Layout.html.twig
@@ -62,7 +62,7 @@
     <div
         id="appdata"
         data-application-vars="{$ _context|json_encode|e('html_attr') $}"
-        data-application-messages="{$ translations()|e('html_attr') $}"
+        data-application-messages="{$ translations|json_encode|e('html_attr') $}"
         data-assets-path="{$ asset( '', 'skin') $}"
         class="is-hidden"
     ></div>
