Output current locale into html element
This is to tell screen readers what language the page is in

Ticket: https://phabricator.wikimedia.org/T361795

--- a/skins/laika/templates/Base_Layout.html.twig
+++ b/skins/laika/templates/Base_Layout.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" class="client-nojs">
+<html lang="{$ locale $}" class="client-nojs">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
