Add individual page titles to the templates
Adds the page titles into the page templates to remove
the title content flash that was happening on page load.

It does this by adding a page title function to Twig.

Ticket: https://phabricator.wikimedia.org/T362630

--- a/skins/laika/templates/Contact_Form.html.twig
+++ b/skins/laika/templates/Contact_Form.html.twig
@@ -1,5 +1,7 @@
 {% extends 'Base_Layout.html.twig' %}
 
+{% block title %}{$ page_title( 'contact_form_page_title' ) $}{% endblock %}
+
 {% block scripts %}
 	{$ parent() $}
 	<script src="{$ asset( 'js/contact_form.js', 'skin' ) $}"></script>
