--- a/skins/laika/templates/Access_Denied.twig
+++ b/skins/laika/templates/Access_Denied.twig
@@ -1,10 +1,12 @@
 {% extends 'Base_Layout.html.twig' %}
 
+{% block title %}{$ page_title( 'access_denied_page_title' ) $}{% endblock %}
+
 {% block main %}
     <div id="app">
         <noscript>
             <h2>{$ site_metadata.access_denied_header $}</h2>
-            <p>{$ message | default( site_metadata.access_denied ) | raw $}<p>
+            <p>{$ message | default( site_metadata.access_denied ) | raw $}</p>
         </noscript>
     </div>
     <div id="appdata"
