--- a/skins/laika/templates/AddressUpdateSuccess.html.twig
+++ b/skins/laika/templates/AddressUpdateSuccess.html.twig
@@ -1,5 +1,7 @@
 {% extends 'Base_Layout.html.twig' %}
 
+{% block title %}{$ page_title( 'address_update_success_page_title' ) $}{% endblock %}
+
 {% block scripts %}
     {$ parent() $}
     <script src="{$ asset( 'js/address_update_success.js', 'skin' ) $}"></script>
