--- a/skins/laika/templates/Comment_List.html.twig
+++ b/skins/laika/templates/Comment_List.html.twig
@@ -1,5 +1,7 @@
 {% extends 'Base_Layout.html.twig' %}
 
+{% block title %}{$ page_title( 'comment_list_page_title' ) $}{% endblock %}
+
 {% block scripts %}
 	{$ parent() $}
 	<script src="{$ asset( 'js/comment_list.js', 'skin' ) $}"></script>
