--- a/skins/laika/templates/Donation_Confirmation.html.twig
+++ b/skins/laika/templates/Donation_Confirmation.html.twig
@@ -1,5 +1,7 @@
 {% extends 'Base_Layout.html.twig' %}
 
+{% block title %}{$ page_title( 'donation_confirmation_page_title' ) $}{% endblock %}
+
 {% block scripts %}
 	{$ parent() $}
 	<script src="{$ asset( 'js/donation_confirmation.js', 'skin' ) $}"></script>
