--- a/skins/laika/templates/Donation_Form.html.twig
+++ b/skins/laika/templates/Donation_Form.html.twig
@@ -1,5 +1,7 @@
 {% extends 'Base_Layout.html.twig' %}
 
+{% block title %}{$ page_title( 'donation_form_page_title' ) $}{% endblock %}
+
 {% block scripts %}
 	{$ parent() $}
 	<script src="{$ asset( 'js/donation_form.js', 'skin' ) $}"></script>
