--- a/skins/laika/templates/Membership_Application.html.twig
+++ b/skins/laika/templates/Membership_Application.html.twig
@@ -1,5 +1,7 @@
 {% extends 'Base_Layout.html.twig' %}
 
+{% block title %}{$ page_title( 'membership_application_page_title' ) $}{% endblock %}
+
 {% block scripts %}
 	{$ parent() $}
 	<script src="{$ asset( 'js/membership_application.js', 'skin' ) $}"></script>
