--- a/skins/laika/templates/Subscription_Confirmation.twig
+++ b/skins/laika/templates/Subscription_Confirmation.twig
@@ -1,5 +1,7 @@
 {% extends 'Base_Layout.html.twig' %}
 
+{% block title %}{$ page_title( 'subscription_confirmation_page_title' ) $}{% endblock %}
+
 {% block scripts %}
     {$ parent() $}
     <script src="{$ asset( 'js/subscription_confirmation.js', 'skin' ) $}"></script>
