--- a/web/res/css/asset_state.css
+++ b/web/res/css/asset_state.css
@@ -1,7 +1,6 @@
-.navbar::after,
-.navigation::after {
-    position: absolute;
-    top: 0;
+body::after {
+    position: fixed;
+    bottom: 0;
     right: 0;
     display: block;
     padding: 0 16px;
@@ -10,14 +9,12 @@
     opacity: 0.5;
 }
 
-.external-assets .navbar::after,
-.external-assets .navigation::after {
+.external-assets::after {
     content: "External assets";
     background: orange;
 }
 
-.no-external-assets .navbar::after,
-.no-external-assets .navigation::after {
+.no-external-assets::after{
     content: "Builtin assets";
     background: green;
 }
