--- a/skins/laika/templates/Base_Layout.html.twig
+++ b/skins/laika/templates/Base_Layout.html.twig
@@ -59,6 +59,7 @@
             </div>
         {% endif %}
     </div>
+    <div id="modal-target"></div>
     <div
         id="appdata"
         data-application-vars="{$ _context|json_encode|e('html_attr') $}"
